@@ -73,6 +73,20 @@ gdb_test "info frame" \
 	".*Saved registers:.*ebp at.*edi at.*eip at.*" \
 	"saved registers in gdb1253"
 
+# Testcase from backtrace/1718.
+
+gdb_test "continue" "Program received signal SIGTRAP.*" "continue to gdb1718"
+
+setup_kfail *-*-* gdb/1718
+gdb_test "backtrace 10" \
+	"#0\[ \t\]*$hex in gdb1718.*\r\n#1\[ \t\]*$hex in main.*" \
+	"backtrace in gdb1718"
+
+setup_kfail *-*-* gdb/1718
+gdb_test "info frame" \
+	".*Saved registers:.*esi at.*ebx at.*eip at.*" \
+	"saved registers in gdb1718"
+
 # Testcase from backtrace/1338.
 
 gdb_test "continue" "Program received signal SIGTRAP.*" "continue to gdb1338"
